Fri Dec 23 08:50:37 2005  Chad Elliott  <elliott_c@ociweb.com>

        * tests/Portable_Interceptors/Processing_Mode_Policy/Collocated/Echo_Collocated_ORBInitializer.h:
        * tests/Portable_Interceptors/Processing_Mode_Policy/Collocated/interceptors.h:
        * tests/Portable_Interceptors/Processing_Mode_Policy/Collocated/test_i.h:
        * tests/Portable_Interceptors/Processing_Mode_Policy/Remote/Echo_Client_ORBInitializer.h:
        * tests/Portable_Interceptors/Processing_Mode_Policy/Remote/Echo_Server_ORBInitializer.h:
        * tests/Portable_Interceptors/Processing_Mode_Policy/Remote/client_interceptor.h:
        * tests/Portable_Interceptors/Processing_Mode_Policy/Remote/server_interceptor.h:
        * tests/Portable_Interceptors/Processing_Mode_Policy/Remote/test_i.h:

          Fixed fuzz errors related to RefCountedServantBase and _MSC_VER >=
          1200.

Fri Dec 23 13:24:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/util/utl_err.cpp:
          Added include of Log_Msg.h to get ACE_ERROR. Can't reproduce
          it on my machine but it can be that because of other defines
          this file is not included implicitly. This fixes bugzilla bug
          2342. Thanks to Dave Craig <dwcraig at qualcomm dot com> for
          reporting this.

Fri Dec 23 10:39:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/IIOP_Acceptor.cpp:
        * examples/POA/On_Demand_Loading/Servant_Manager.cpp:
          Fixed 64bit conversion warnings

Fri Dec 23 10:29:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Native_Exceptions/Native_Exceptions.mpc:
        * tests/UNKNOWN_Exception/UNKNOWN_Exception.mpc:
          Changed the way we change the TAO_IDL flags so that adding
          more flags from the platform_macros.GNU file works for these
          projects

Fri Dec 23 10:19:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PI/PI_PolicyFactory.h: