@@ -5,6 +5,8 @@
 #include "tao/PI/ProcessingModePolicy.h"
 #include "tao/ORB_Constants.h"
 
+TAO_BEGIN_VERSIONED_NAMESPACE_DECL
+
 ACE_RCSID (tao,
            PI_PolicyFactory,
            "$Id$")
@@ -42,5 +44,7 @@ TAO_PI_PolicyFactory::create_policy (
   ACE_THROW_RETURN (CORBA::PolicyError (CORBA::BAD_POLICY_TYPE),
                     CORBA::Policy::_nil ());
 }
+
+TAO_END_VERSIONED_NAMESPACE_DECL
 
 #endif  /* TAO_HAS_INTERCEPTORS == 1 */
